test/invalid/return_value_void.py
# Returning a value from a void function
def foo() -> None:
    return 42

def main() -> None:
    foo()
